examples/bad/application-of-expression.hp
(let def fun :: Int -> Int x = x + 1 in
  fun) 10;
